--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "test": "vitest"
   },
   "dependencies": {
     "vue": "^3.4.21"
@@ -22,6 +23,7 @@
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
+    "vitest": "^1.6.0",
     "vue-tsc": "^2.0.11"
   }
 }
